20180915 1.新增重定向cout输出打印 2.优化代码结构

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -17,7 +17,9 @@ add_library( # Sets the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             src/main/jni/T_Auto.cpp)
+             src/main/jni/include/T_Auto.cpp
+             src/main/jni/include/codenza.cpp
+             src/main/jni/include/android_buf.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
