--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,7 @@ android {
         ndk {
             moduleName "Auto"       //生成的so名字
             ldLibs "log"//实现__android_log_print
-            abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a"
-//,"mips","mips64" //输出指定三种abi体系结构下的so库。目前可有可无。
+            abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a"//,"mips","mips64" //输出指定三种abi体系结构下的so库。目前可有可无。
         }
     }
 
