--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.caesar.auto">
-
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26"></uses-sdk>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -18,7 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".loads.PagingLoadActivity"></activity>
+        <activity android:name=".loads.PagingLoadActivity">
+
+        </activity>
     </application>
 
 </manifest>
