--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@
 
 buildscript {
     repositories {
-        jcenter()
-        google()
+//        jcenter()
+//        google()
+        maven{url 'https://maven.aliyun.com/repository/google'}
+        maven{url 'https://maven.aliyun.com/repository/jcenter'}
+        maven{url 'http://maven.aliyun.com/nexus/content/gruops/public'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,8 +18,14 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-        google()
+//        jcenter()
+//        google()
+//        maven{
+//            url "https://maven.google.com"
+//        }
+        maven{url 'https://maven.aliyun.com/repository/google'}
+        maven{url 'https://maven.aliyun.com/repository/jcenter'}
+        maven{url 'http://maven.aliyun.com/nexus/content/gruops/public'}
     }
 }
 
