--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,14 @@ android {
         }
     }
     tasks.findByPath(':clean').dependsOn ndkClean
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'META-INF/INDEX.LIST'
+    }
 }
 
 dependencies {
@@ -86,5 +94,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'android.arch.paging:runtime:1.0.0-alpha3'
     testImplementation 'junit:junit:4.12'
+    implementation 'org.apache.ant:ant-commons-net:1.10.5'
 
 }
