--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.caesar.auto">
-    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26"></uses-sdk>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -21,6 +20,7 @@
         <activity android:name=".loads.PagingLoadActivity">
 
         </activity>
+        <activity android:name=".ftp.FtpActivity"/>
     </application>
 
 </manifest>
